# Yandex_Cemp_Smart_Scale

./: .gitignore  Dockerfile.tests  README.md  api.py  docker-compose.pgvector.yml  docker-compose.tests.yml  pyproject.toml  requirements-test.txt  requirements.txt  Ожидание
Server_prod/DB/: fruits.db  fruits.db.index
Server_prod/ML/: db_adapters.py  detector.py  vector_model.py
Server_prod/ML/utils/: __init__.py  db_adapters.py  export_to_onnx.py  test_dino.py
assets/models/: fruit_embedder_final.onnx  yolo_int8.onnx
data/: product_prices.py
data/vector_db/: catalog.pkl  fruits.db  fruits.db.index
docs/: TASK.MD  architecture.md  pgvector_bootstrap.md
images/: product.csv
scripts/: convert_yolo_to_onnx.py  evaluate_embedding_accuracy.py  quantize_onnx.py  quantize_yolo.py
src/smart_scale/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py
src/smart_scale/api/: app.py  dependencies.py  errors.py  prediction_history.py  schemas.py
src/smart_scale/api/routes/: predict.py  ui.py
src/smart_scale/api/templates/: ui.html
src/smart_scale/domain/: __init__.py  models.py
src/smart_scale/hardware/: __init__.py  camera.py  controller.py  scale.py
src/smart_scale/ml/: __init__.py  anomaly.py  catalog_seed.py  detection.py  embedding.py  pipeline.py  vector_store.py
tests/: __init__.py  test_api.py  test_ml_pipeline.py
