[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-scale"
version = "0.1.0"
description = "Recognition service for the Smart Scale project."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
smart-scale-api = "smart_scale.cli:main"
smart-scale-bootstrap = "smart_scale.bootstrap:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
